# snakerl

./: CMakeLists.txt  README.md  const.c  const.h  game.c  game.h  ios_main.c  ios_main.m  main.c  snakerl.c  snakerl.h  ui.c  ui.h
app/: LaunchScreen.storyboard  generate_icons.sh
